# todo-api-strawberry

./: README.md
.github/workflows/: test-lint.yml
app/: Makefile  main.py  mypy.ini  pyproject.toml
app/api/resolvers/: todo.py
app/api/schemas/: todo.py
app/tests/: conftest.py
app/tests/resolvers/: test_todo.py
